--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "del": "^4.1.1",
+    "gulp-concat": "^2.6.1",
     "swiper": "^7.0.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
